# Cpp_v2.0

./: CMakeLists.txt  README.md  main.cpp
assets/: keywords.txt  source_file.cppt  source_file.txt
global_functions/: global_funcs.h
grammar/: syntax.md
includes/: libraries.h
lexical-analyzer/headers/: lexer.h  tokens.h  trie.h
lexical-analyzer/sources/: lexer.cpp  main.cpp  tokens.cpp  trie.cpp
semantic-analyzer/TID/: tid.cpp  tid.h
semantic-analyzer/headers/: ast-node.h  rpn.h  semantic.h  tid.h
semantic-analyzer/sources/: rpn.cpp  semantic.cpp  tid.cpp
syntax-analyzer/headers/: parser.h  tokens.h
syntax-analyzer/sources/: parser.cpp
